# otus_homework_2.1_tie_tulp

./: .travis.yml  CMakeLists.txt  CMakeSettings.json
include/: custom_tie_tuple.h
src/: CMakeLists.txt  main.cpp
src_lib/: CMakeLists.txt  lib.cpp
src_test/: CMakeLists.txt  test_tie_tulp.cpp
